Added route validation
