# docs/swagger.json
@@ -8,36 +8,6 @@
     },
     "host": "localhost:8000",
     "paths": {
-        "/DecisionUpdate": {
-            "put": {
-                "description": "Updates the decison taken by the team after wining the toss",
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Toss"
-                ],
-                "parameters": [
-                    {
-                        "description": "Descision Updated",
-                        "name": "toss",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Toss"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Toss"
-                        }
-                    }
-                }
-            }
-        },
         "/addCareer": {
             "post": {
                 "description": "Add player career",
@@ -72,7 +42,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Career"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -110,7 +80,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     }
                 }
             }
@@ -139,7 +112,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ScoreCard"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -159,12 +132,12 @@
                 ],
                 "parameters": [
                     {
-                        "description": "ID of the user whose passsword is to be changed",
-                        "name": "user_id",
+                        "description": "Registers a user",
+                        "name": "UserDetails",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object"
+                            "$ref": "#/definitions/models.Credential"
                         }
                     }
                 ],
@@ -172,7 +145,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Credential"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -203,7 +176,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Balls"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -233,7 +206,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Match"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -266,7 +239,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Player"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -303,7 +276,37 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Team"
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/decisionUpdate": {
+            "put": {
+                "description": "Updates the decison taken by the team after wining the toss",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Toss"
+                ],
+                "parameters": [
+                    {
+                        "description": "Descision Updated",
+                        "name": "toss",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Toss"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -340,13 +343,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -374,7 +371,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     }
                 }
             }
@@ -403,7 +403,40 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Match"
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/forgotPassword": {
+            "post": {
+                "description": "updates the password for a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "parameters": [
+                    {
+                        "description": "email of the user",
+                        "name": "email",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -439,6 +472,70 @@
                 }
             }
         },
+        "/resetPassword": {
+            "post": {
+                "description": "Resests the user password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "email of the user",
+                        "name": "token",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/retirePlayer": {
+            "delete": {
+                "description": "Shows the list of all the player",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Player"
+                ],
+                "parameters": [
+                    {
+                        "description": "Id of the player",
+                        "name": "id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/showMatch": {
             "post": {
                 "description": "Show the list of matches",
@@ -452,7 +549,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Match"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -474,7 +571,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Player"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "400": {
@@ -543,7 +640,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ScoreCard"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -573,7 +670,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Player"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -601,7 +698,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Team"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -631,7 +728,40 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Toss"
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/updatePassword": {
+            "post": {
+                "description": "updates the password for a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "parameters": [
+                    {
+                        "description": "ID of the user whose passsword is to be changed",
+                        "name": "user_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -664,7 +794,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Credential"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -681,45 +811,6 @@
                 "valid": {
                     "description": "Valid is true if Time is not NULL",
                     "type": "boolean"
-                }
-            }
-        },
-        "models.Balls": {
-            "type": "object",
-            "properties": {
-                "ballCount": {
-                    "type": "integer"
-                },
-                "ballId": {
-                    "type": "string"
-                },
-                "ballType": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "isValid": {
-                    "type": "string"
-                },
-                "matchId": {
-                    "type": "string"
-                },
-                "over": {
-                    "type": "number"
-                },
-                "playerId": {
-                    "type": "string"
-                },
-                "runs": {
-                    "description": "runs on that particular ball",
-                    "type": "integer"
-                },
-                "updatedAt": {
-                    "type": "string"
                 }
             }
         },
@@ -947,71 +1038,6 @@
                 "data": {},
                 "status": {
                     "type": "string"
-                }
-            }
-        },
-        "models.ScoreCard": {
-            "type": "object",
-            "required": [
-                "playerType"
-            ],
-            "properties": {
-                "ballsPlayed": {
-                    "type": "integer"
-                },
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "$ref": "#/definitions/gorm.DeletedAt"
-                },
-                "economy": {
-                    "type": "number"
-                },
-                "fours": {
-                    "type": "integer"
-                },
-                "isOut": {
-                    "type": "string"
-                },
-                "maidenOvers": {
-                    "type": "integer"
-                },
-                "noBalls": {
-                    "type": "integer"
-                },
-                "oversBowled": {
-                    "type": "integer"
-                },
-                "playerId": {
-                    "type": "string"
-                },
-                "playerType": {
-                    "type": "string"
-                },
-                "runScored": {
-                    "type": "integer"
-                },
-                "runsGiven": {
-                    "type": "integer"
-                },
-                "scorecardId": {
-                    "type": "string"
-                },
-                "sixes": {
-                    "type": "integer"
-                },
-                "strikeRate": {
-                    "type": "number"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "wickets": {
-                    "type": "integer"
-                },
-                "wideBalls": {
-                    "type": "integer"
                 }
             }
         },
